swagger with all methods
