# pkg/models/j_w_t_key.go
@@ -1,0 +1,49 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// JWTKey j w t key
+// swagger:model JWTKey
+type JWTKey struct {
+
+	// device id
+	DeviceID *string `json:"device_id,omitempty"`
+
+	// type
+	Type string `json:"type,omitempty"`
+
+	// user id
+	UserID *string `json:"user_id,omitempty"`
+}
+
+// Validate validates this j w t key
+func (m *JWTKey) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *JWTKey) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *JWTKey) UnmarshalBinary(b []byte) error {
+	var res JWTKey
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
