# pkg/restapi/operations/devices/device_registration_responses.go
@@ -57,6 +57,50 @@ func (o *DeviceRegistrationOK) WriteResponse(rw http.ResponseWriter, producer ru
 	}
 }
 
+// DeviceRegistrationNotFoundCode is the HTTP code returned for type DeviceRegistrationNotFound
+const DeviceRegistrationNotFoundCode int = 404
+
+/*DeviceRegistrationNotFound Запрашиваемый ресурс не найден
+
+swagger:response deviceRegistrationNotFound
+*/
+type DeviceRegistrationNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResult `json:"body,omitempty"`
+}
+
+// NewDeviceRegistrationNotFound creates DeviceRegistrationNotFound with default headers values
+func NewDeviceRegistrationNotFound() *DeviceRegistrationNotFound {
+
+	return &DeviceRegistrationNotFound{}
+}
+
+// WithPayload adds the payload to the device registration not found response
+func (o *DeviceRegistrationNotFound) WithPayload(payload *models.ErrorResult) *DeviceRegistrationNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the device registration not found response
+func (o *DeviceRegistrationNotFound) SetPayload(payload *models.ErrorResult) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeviceRegistrationNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
 // DeviceRegistrationUnprocessableEntityCode is the HTTP code returned for type DeviceRegistrationUnprocessableEntity
 const DeviceRegistrationUnprocessableEntityCode int = 422
 
